--- a/project/AddressBook/MyTest.vcxproj.filters
+++ b/project/AddressBook/MyTest.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="head.h">
       <Filter>头文件</Filter>
     </ClCompile>
+    <ClCompile Include="head.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
